Fix org titles alignment

--- a/euth_wagtail/static/scss/components/_project-page.scss
+++ b/euth_wagtail/static/scss/components/_project-page.scss
@@ -111,6 +111,10 @@
 
     .project-tile-org-img-container {
         @include rem(padding-right, 15px);
+
+        img {
+            min-width: 55px;
+        }
     }
 
     .project-tile-org-img-container,
@@ -124,6 +128,8 @@
         @include rem(font-size, 16px);
         color: $gray;
         font-weight: bold;
+        text-align: left;
+        width: 100%;
     }
 }
 
